// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`comment expansion > should allow additional rules, and they should override those provided my mdat-readme 1`] = `
VFile {
  "cwd": "/Users/mika/Code/mdat/packages/mdat-readme",
  "data": {},
  "history": [],
  "messages": [
    [3:1-3:1: Expanded: <!-- banner -->],
    [5:1-5:1: Expanded: <!-- badges {custom: {Documentation: {image: "https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs&logoColor=222222", link: "https://kitschpatrol.com/svelte-tweakpane-ui"}}} -->],
    [7:1-7:1: Expanded: <!-- short-description -->],
    [17:1-17:1: Expanded: <!-- code {file: "./test/assets/extra-rules.js"} -->],
    [29:1-29:1: Expanded: <!-- extra -->],
    [31:1-31:1: Expanded: <!-- contributing -->],
    [33:1-33:1: Expanded: <!-- license -->],
    [9:1-9:1: Expanded: <!-- table-of-contents -->],
    [1:1-1:1: Expanded: <!-- title {prefix: '📝 '} -->],
    [1:1-1:1: Missing optional: <!-- footer -->],
    [1:1-1:1: Missing optional: <!-- header -->],
    [23:1-23:1: Missing rule: <!-- mm-short-description  -->],
  ],
  "value": "<!--+ Warning: Content in HTML comment blocks generated by mdat on 2024-02-01 +-->

<!-- title {prefix: '📝 '} -->

# \`extra-rules.js\` has overridden the title

<!-- /title -->

<!-- banner -->

![mdat-readme banner](assets/hero.png)

<!-- /banner -->

<!-- badges {custom: {Documentation: {image: "https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs&logoColor=222222", link: "https://kitschpatrol.com/svelte-tweakpane-ui"}}} -->

[![NPM Package](https://img.shields.io/npm/v/mdat-readme.svg)](https://npmjs.com/package/mdat-readme)
[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)
[![Documentation](https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs\\&logoColor=222222)](https://kitschpatrol.com/svelte-tweakpane-ui)

<!-- /badges -->

<!-- short-description -->

**Automatically populate comment placeholders in readme.md files with metadata from your package.json.**

<!-- /short-description -->

<!-- table-of-contents -->

## Table of contents

* [Example code](#example-code)

* [Prefix example](#prefix-example)

* [Extra rules example](#extra-rules-example)

* [Contributing](#contributing)

* [License](#license)

<!-- /table-of-contents -->

A long description goes here.

## Example code

The code block below was dynamically embedded by Mdat.

<!-- code {file: "./test/assets/extra-rules.js"} -->

\`\`\`.js
// This is a code sample for testing purposes
// There doesn't seem to be a way to type a default export in JSDoc

/** @satisfies {import('../../src/lib/rules').Rules} */
const rules = {
	extra: '**A bold statement from extra-rules.js**',
	title: {
		applicationOrder: 2,
		content: '# \`extra-rules.js\` has overridden the title',
	},
}

export default rules

\`\`\`

<!-- /code -->

## Prefix example

The comment below only expands if \`--prefix mm-\` was set:

<!-- mm-short-description  -->

## Extra rules example

The comment below only expands if \`--rules extra-rules.js\` was set:

<!-- extra -->

**A bold statement from extra-rules.js**

<!-- /extra -->

<!-- contributing -->

## Contributing

[Issues](https://github.com/kitschpatrol/mdat/issues) and pull requests are welcome.

<!-- /contributing -->

<!-- license -->

## License

[MIT](license.txt) © Eric Mika

<!-- /license -->
",
}
`;

exports[`comment expansion > should exclude the meta tag if asked 1`] = `
VFile {
  "cwd": "/Users/mika/Code/mdat/packages/mdat-readme",
  "data": {},
  "history": [],
  "messages": [
    [3:1-3:1: Expanded: <!-- banner -->],
    [5:1-5:1: Expanded: <!-- badges {custom: {Documentation: {image: "https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs&logoColor=222222", link: "https://kitschpatrol.com/svelte-tweakpane-ui"}}} -->],
    [7:1-7:1: Expanded: <!-- short-description -->],
    [17:1-17:1: Expanded: <!-- code {file: "./test/assets/extra-rules.js"} -->],
    [31:1-31:1: Expanded: <!-- contributing -->],
    [33:1-33:1: Expanded: <!-- license -->],
    [9:1-9:1: Expanded: <!-- table-of-contents -->],
    [1:1-1:1: Expanded: <!-- title {prefix: '📝 '} -->],
    [1:1-1:1: Missing optional: <!-- footer -->],
    [1:1-1:1: Missing optional: <!-- header -->],
    [23:1-23:1: Missing rule: <!-- mm-short-description  -->],
    [29:1-29:1: Missing rule: <!-- extra -->],
  ],
  "value": "<!-- title {prefix: '📝 '} -->

# 📝 mdat-readme

<!-- /title -->

<!-- banner -->

![mdat-readme banner](assets/hero.png)

<!-- /banner -->

<!-- badges {custom: {Documentation: {image: "https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs&logoColor=222222", link: "https://kitschpatrol.com/svelte-tweakpane-ui"}}} -->

[![NPM Package](https://img.shields.io/npm/v/mdat-readme.svg)](https://npmjs.com/package/mdat-readme)
[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)
[![Documentation](https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs\\&logoColor=222222)](https://kitschpatrol.com/svelte-tweakpane-ui)

<!-- /badges -->

<!-- short-description -->

**Automatically populate comment placeholders in readme.md files with metadata from your package.json.**

<!-- /short-description -->

<!-- table-of-contents -->

## Table of contents

* [Example code](#example-code)

* [Prefix example](#prefix-example)

* [Extra rules example](#extra-rules-example)

* [Contributing](#contributing)

* [License](#license)

<!-- /table-of-contents -->

A long description goes here.

## Example code

The code block below was dynamically embedded by Mdat.

<!-- code {file: "./test/assets/extra-rules.js"} -->

\`\`\`.js
// This is a code sample for testing purposes
// There doesn't seem to be a way to type a default export in JSDoc

/** @satisfies {import('../../src/lib/rules').Rules} */
const rules = {
	extra: '**A bold statement from extra-rules.js**',
	title: {
		applicationOrder: 2,
		content: '# \`extra-rules.js\` has overridden the title',
	},
}

export default rules

\`\`\`

<!-- /code -->

## Prefix example

The comment below only expands if \`--prefix mm-\` was set:

<!-- mm-short-description  -->

## Extra rules example

The comment below only expands if \`--rules extra-rules.js\` was set:

<!-- extra -->

<!-- contributing -->

## Contributing

[Issues](https://github.com/kitschpatrol/mdat/issues) and pull requests are welcome.

<!-- /contributing -->

<!-- license -->

## License

[MIT](license.txt) © Eric Mika

<!-- /license -->
",
}
`;

exports[`comment expansion > should expand prefixed comments only 1`] = `
VFile {
  "cwd": "/Users/mika/Code/mdat/packages/mdat-readme",
  "data": {},
  "history": [],
  "messages": [
    [23:1-23:1: Expanded: <!-- mm-short-description  -->],
    [1:1-1:1: Missing required: <!-- contributing -->],
    [1:1-1:1: Missing required: <!-- license -->],
    [1:1-1:1: Missing required: <!-- title -->],
    [1:1-1:1: Missing optional: <!-- badges -->],
    [1:1-1:1: Missing optional: <!-- banner -->],
    [1:1-1:1: Missing optional: <!-- code -->],
    [1:1-1:1: Missing optional: <!-- footer -->],
    [1:1-1:1: Missing optional: <!-- header -->],
    [1:1-1:1: Missing optional: <!-- table-of-contents -->],
    [1:1-1:1: Missing prefix: <!-- title {prefix: '📝 '} -->],
    [5:1-5:1: Missing prefix: <!-- badges {custom: {Documentation: {image: "https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs&logoColor=222222", link: "https://kitschpatrol.com/svelte-tweakpane-ui"}}} -->],
    [17:1-17:1: Missing prefix: <!-- code {file: "./test/assets/extra-rules.js"} -->],
    [29:1-29:1: Missing prefix: <!-- extra -->],
  ],
  "value": "<!--+ Warning: Content in HTML comment blocks generated by mdat on 2024-02-01 +-->

<!-- title {prefix: '📝 '} -->

<!-- banner -->

<!-- badges {custom: {Documentation: {image: "https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs&logoColor=222222", link: "https://kitschpatrol.com/svelte-tweakpane-ui"}}} -->

<!-- short-description -->

<!-- table-of-contents -->

A long description goes here.

## Example code

The code block below was dynamically embedded by Mdat.

<!-- code {file: "./test/assets/extra-rules.js"} -->

## Prefix example

The comment below only expands if \`--prefix mm-\` was set:

<!-- mm-short-description  -->

**Automatically populate comment placeholders in readme.md files with metadata from your package.json.**

<!-- /mm-short-description -->

## Extra rules example

The comment below only expands if \`--rules extra-rules.js\` was set:

<!-- extra -->

<!-- contributing -->

<!-- license -->
",
}
`;

exports[`comment expansion > should expand readme comments 1`] = `
VFile {
  "cwd": "/Users/mika/Code/mdat/packages/mdat-readme",
  "data": {},
  "history": [],
  "messages": [
    [3:1-3:1: Expanded: <!-- banner -->],
    [5:1-5:1: Expanded: <!-- badges {custom: {Documentation: {image: "https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs&logoColor=222222", link: "https://kitschpatrol.com/svelte-tweakpane-ui"}}} -->],
    [7:1-7:1: Expanded: <!-- short-description -->],
    [17:1-17:1: Expanded: <!-- code {file: "./test/assets/extra-rules.js"} -->],
    [31:1-31:1: Expanded: <!-- contributing -->],
    [33:1-33:1: Expanded: <!-- license -->],
    [9:1-9:1: Expanded: <!-- table-of-contents -->],
    [1:1-1:1: Expanded: <!-- title {prefix: '📝 '} -->],
    [1:1-1:1: Missing optional: <!-- footer -->],
    [1:1-1:1: Missing optional: <!-- header -->],
    [23:1-23:1: Missing rule: <!-- mm-short-description  -->],
    [29:1-29:1: Missing rule: <!-- extra -->],
  ],
  "value": "<!--+ Warning: Content in HTML comment blocks generated by mdat on 2024-02-01 +-->

<!-- title {prefix: '📝 '} -->

# 📝 mdat-readme

<!-- /title -->

<!-- banner -->

![mdat-readme banner](assets/hero.png)

<!-- /banner -->

<!-- badges {custom: {Documentation: {image: "https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs&logoColor=222222", link: "https://kitschpatrol.com/svelte-tweakpane-ui"}}} -->

[![NPM Package](https://img.shields.io/npm/v/mdat-readme.svg)](https://npmjs.com/package/mdat-readme)
[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)
[![Documentation](https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs\\&logoColor=222222)](https://kitschpatrol.com/svelte-tweakpane-ui)

<!-- /badges -->

<!-- short-description -->

**Automatically populate comment placeholders in readme.md files with metadata from your package.json.**

<!-- /short-description -->

<!-- table-of-contents -->

## Table of contents

* [Example code](#example-code)

* [Prefix example](#prefix-example)

* [Extra rules example](#extra-rules-example)

* [Contributing](#contributing)

* [License](#license)

<!-- /table-of-contents -->

A long description goes here.

## Example code

The code block below was dynamically embedded by Mdat.

<!-- code {file: "./test/assets/extra-rules.js"} -->

\`\`\`.js
// This is a code sample for testing purposes
// There doesn't seem to be a way to type a default export in JSDoc

/** @satisfies {import('../../src/lib/rules').Rules} */
const rules = {
	extra: '**A bold statement from extra-rules.js**',
	title: {
		applicationOrder: 2,
		content: '# \`extra-rules.js\` has overridden the title',
	},
}

export default rules

\`\`\`

<!-- /code -->

## Prefix example

The comment below only expands if \`--prefix mm-\` was set:

<!-- mm-short-description  -->

## Extra rules example

The comment below only expands if \`--rules extra-rules.js\` was set:

<!-- extra -->

<!-- contributing -->

## Contributing

[Issues](https://github.com/kitschpatrol/mdat/issues) and pull requests are welcome.

<!-- /contributing -->

<!-- license -->

## License

[MIT](license.txt) © Eric Mika

<!-- /license -->
",
}
`;
